# malachi

./: .clang-format  .clang-tidy  .clang-tidy-ignore  .flake8  .gitignore  .perltidyrc  CHANGELOG.md  GNUmakefile  README.md  build.sh  build.zig  configure  dune-project  flake.nix  malachi.cabal  malachi.opam  meson.build  meson_options.txt  pyproject.toml  run.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  macos.yml
cbits/: mupdf.c
config/: discover.ml
exe/: Main.hs
include/: config.h  error.h  path.h  platform.h  project.h.in
include/alloc/: alloc.h
include/config/: Config.h  Platform.h  config.h  platform.h
include/path/: path.h
include/platform/: platform.h
lib/: config.sh  dune  firstrun.awk  index.awk  mupdf.ml  mupdf_stubs.c  poppler.ml  poppler_stubs.cpp  schema.sql
lib/alloc/: alloc.c
lib/config/: Config.cpp  config.c  config.cpp
lib/path/: path.c
malachi/: __init__.py  __main__.py  config.py  daemon.py  database.py  schema.sql  status.py
malachi/client/: git.py
man/man1/: malachi.1
src/: MuPDF.hs  Version.hs  config.c  config.cpp  main.c  main.cpp  path.c  path.cpp
src/cmd/malachi/: config.c  config_test.c  config_test_macos.c  config_test_xdg.c  dat.h  db.c  filt.c  filter.c  filter_mupdf.c  filtmupdf.c  fns.h  main.c  malachi.c  malachi.h  parser.c  parserjson.c  path.c  platform_macos.c  platform_test.c  platform_xdg.c  platmac.c  platmacos.c  platxdg.c  schema.h.in  schema.sql  test.c  test.h  testconf.c  testconfmac.c  testconfmacos.c  testconfxdg.c  testplat.c  util.c
test/: .clang-tidy  config_test.c  config_test.cpp  config_test_linux.c  config_test_macos.c  config_test_macos.cpp  config_test_unknown.c  config_test_windows.c  config_test_windows.cpp  config_test_xdg.c  config_test_xdg.cpp  dune  environment.h  platform_test.c  platform_test.cpp  test.h  test_utils.h
tests/: test_database.py  test_integration.py  test_scaffold.py  test_status.py
