cabal-version:      3.0
name:               malachi
version:            0.1.0.0
-- synopsis:
-- description:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Henry Till
maintainer:         henrytill@gmail.com
-- copyright:
category:           Utility
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:            warnings
    exposed-modules:   MuPDF
                       Version
    autogen-modules:   Paths_malachi
    other-modules:     Paths_malachi
    -- other-modules:
    -- other-extensions:
    build-depends:     base ^>=4.17.2.1
    pkgconfig-depends: mupdf
    hs-source-dirs:    src
    default-language:  Haskell2010
    c-sources:         cbits/mupdf.c
    cc-options:        -std=c11 -Wall -Wextra -Wpedantic -Wconversion -Wsign-conversion

executable malachi
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        malachi

    hs-source-dirs:   exe
    default-language: Haskell2010

test-suite malachi-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        malachi
