[build-system]
requires = ["setuptools>=52.0"]
build-backend = "setuptools.build_meta"

[project]
name = "malachi"
dynamic = ["version"]
description = "The librarian"
authors = [{ name = "Henry Till", email = "henrytill@gmail.com" }]
license = { file = "COPYING" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["platformdirs>=4.2.2"]

[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "flake8>=5.0.4",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "pylint>=2.16.2",
]
test = []

[project.scripts]
malachi = "malachi.__main__:main"

[tool.setuptools]
packages = ["malachi"]

[tool.setuptools.dynamic]
version = { attr = "malachi.version.__version__" }

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
known_first_party = ["ananke"]
line_length = 120

[tool.mypy]
strict = true
check_untyped_defs = true
warn_redundant_casts = false

[tool.pylint]
max-line-length = 120
disable = [
    "C0114", # missing-module-docstring, too much
    "C0115", # missing-class-docstring, too much
    "C0301", # line-too-long, we use black for formatting
    "C0414", # useless-import-alias, we use aliases for type checking
    "R0801", # duplicate-code, no thanks
]

[tool.pyright]
strict = ["malachi", "tests"]
