(library
 (name mupdf)
 (modules mupdf)
 (wrapped false)
 (foreign_stubs
  (language c)
  (names mupdf_stubs)
  (flags
   (:standard)
   (:include mupdf_cflags.sexp)))
 (c_library_flags
  (:standard)
  (:include mupdf_libs.sexp)))

(rule
 (targets mupdf_cflags.sexp mupdf_libs.sexp)
 (action
  (run ../config/discover.exe)))
